--- a/hymnchtv/index.html
+++ b/hymnchtv/index.html
@@ -110,8 +110,8 @@
 					<h2>书拉密女诗歌本应用程序主用户界面</h2>
 					<div class="media">
             <image src="./img/01.hymnchtv_main.png"/>
-						<p>诗歌输入可使用诗歌编号，目录选项或简体中文内容搜索。长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’。
-						<br/>诗歌编号：输入(附)号码后按大本，补充，新颂或儿诗。</p>
+						<p>诗歌输入可使用诗歌编号，目录选项或简体中文内容搜索。诗歌编号：输入(附)号码后按大本，补充，新颂，儿诗或英文。
+						内容搜索：长按[内容搜索]按钮即可将输入文字词组转换‘他’&#10145;‘祂’。</p>
 					</div>					
 				</li>
 
